# qiish

./: Cargo.toml  test.sh
src/: lex.rs  lookahead.rs  main.rs  options.rs  parse.rs  run.rs  shell.rs
src/commands/: mod.rs
src/qiish/: qiish.rs  quantii_link.rs
src/qiish/other_commands/: cat.rs  cp.rs  mod.rs  rm.rs
