[package]
name = "qiish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "qiish"
path = "src/main.rs"

[[bin]]
name = "qiish-quantii"
path = "src/main.rs"
# We must use different function here
# because this is a different binary
# specific for quantii
fn = "main_quantii"
rustc-args = ["--target=wasm32-wasi"]

[lib]
name = "qiish"
path = "src/qiish/qiish.rs"

[dependencies]
qiish-argparse = { git="https://github.com/ardaku/qiish-argparse" }
quantii-types = { git="https://github.com/ardaku/quantii-types" }