[package]
name = "qiish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "qiish"
path = "src/main.rs"

[[bin]]
name = "qiish"
path = "src/main.rs"

[[bin]]
name = "qiish_shell"
path = "src/shell.rs"

[dependencies]
env_logger = "0.9"
log = "0.4"
logos = "0.12"
whoami = "1.2"